<resources>
    <string name="app_name">Doodle Blue</string>
    <string name="title_activity_dashborad">MainActivity</string>
    <string name="title_prices">Prices</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_portfolio">Portfolio</string>
    <string name="title_news">News</string>
    <string name="title_invest">Invest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price_format">%,.2f $</string>
</resources>